--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "antd": "^5.27.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-router-dom": "^7.9.3"
@@ -34,6 +35,7 @@
     "sass": "^1.93.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-sass-dts": "^1.3.33"
   }
 }
