--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "antd": "^5.27.4",
     "react": "19.2.0",
