--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@tanstack/react-query": "^5.90.2",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "antd": "^5.27.4",
+    "axios": "^1.12.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
