--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "pwa:serve": "vite build && vite preview"
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
@@ -41,6 +42,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.1.0",
     "vite-plugin-sass-dts": "^1.3.33"
   }
 }
