--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,17 @@
     "axios": "^1.12.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-grid-layout": "^1.5.2",
     "react-router-dom": "^7.9.3",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@types/react-grid-layout": "^1.3.5",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9.36.0",
