--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.2.0",
     "react-grid-layout": "^1.5.2",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.3.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
