--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react-swc": "^4.2.2",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.19",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-grid-layout": "^1.5.2",
